<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Glucos App</string>
    <string name="glucos_app">Glucos App</string>
    <string name="logo_app">logo app</string>
    <string name="created_by"><font color="#000000">Created By</font> <font color="#103C60">Glucos Team</font></string>
    <string-array name="email">
        <item>herdi13yyo@gmail.com</item>
        <item>paskalis0623@gmail.com</item>
        <item>suryaherdiansyah4@gmail.com</item>
        <item tools:ignore="Typos">aldrinarifin1@gmail.com</item>
        <item>wahdinaazizah457@gmail.com</item>
    </string-array>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="txt_register">Dont have an account?</string>
    <string name="register_here">SIGN UP</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="name">Name</string>
    <string name="register">REGISTER</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Diabetes</string>
    <string name="title_notifications">Bantuan</string>
    <string name="roleDev">Role Dev</string>
    <string name="foto_developer">foto developer</string>
    <string name="hubungi_kami_tim_developer">Hubungi Kami - Glucos Team</string>
    <string name="tipe_diabetes">Tipe Diabetes</string>
    <string name="penjelasan_tipe_diabtes">Penjelasan Tipe Diabtes</string>
    <string name="tipe_tipe_diabetes">Tipe - Tipe Diabetes</string>
    <string name="nama_user">Nama User</string>
    <string name="logout">LOGOUT</string>
    <string name="iconprofile">iconProfile</string>
    <string name="berisi_penjelasan"><big><b><font color="#000000">Yuk Kenali Diabetes</font></b></big>\n\nDiabetes adalah penyakit kronis yang ditandai dengan ciri-ciri berupa tingginya kadar gula (glukosa) darah. Glukosa merupakan sumber energi utama bagi sel tubuh manusia. \n\nGlukosa yang menumpuk di dalam darah akibat tidak diserap sel tubuh dengan baik dapat menimbulkan berbagai gangguan organ tubuh. Jika diabetes tidak dikontrol dengan baik, dapat timbul berbagai komplikasi yang membahayakan nyawa penderita.</string>
    <string name="yuk_kenali_diabetes">Yuk Kenali Diabetes</string>
    <string name="txt_deteksi">Deteksi dini potensi diabtes pada diri anda.</string>
    <string name="mulai_deteksi">Mulai Deteksi</string>
    <string name="deteksi_diabetes">Deteksi Diabetes</string>
    <string name="catatan_minum_obat">Catatan Minum Obat</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="catatan_minum_obat_harian_anda">Catatan minum obat harian, ketuk button untuk merubah status. \n\nCatatan akan otomatis direset setiap hari, namun jika terjadi kesalahan anda dapat menggunakan button reset.</string>
    <string name="pagiBelumTxt"><big><b>PAGI</b></big>\nBelum Diminum</string>
    <string name="siangBelumTxt"><big><b>SIANG</b></big>\nBelum Diminum</string>
    <string name="malamBelumTxt"><big><b>MALAM</b></big>\nBelum Diminum</string>
    <string name="pagiSudahTxt"><big><b>PAGI</b></big>\nSudah Diminum</string>
    <string name="siangSudahTxt"><big><b>SIANG</b></big>\nSudah Diminum</string>
    <string name="malamSudahTxt"><big><b>MALAM</b></big>\nSudah Diminum</string>
    <string name="alarm_message">Pesan Alarm</string>
    <string name="repeating_alarm">Repeating Alarm</string>
    <string name="set_repeating_alarm">Set Alarm</string>
    <string name="cancel_alarm">Batalkan Alarm</string>
    <string name="pagi">Pagi</string>
    <string name="_08_00">08:00</string>
    <string name="ketuk_waktu_untuk_setting_alarm">Ketuk untuk pilih waktu untuk setting alarm terlebih dahulu</string>
    <string name="_12_00">12:00</string>
    <string name="siang">Siang</string>
    <string name="_20_00">20:00</string>
    <string name="malam">Malam</string>
    <string name="reset_catatan_obat">Reset Catatan Obat</string>
    <string name="deteksi_potensi_diabetes">Deteksi Potensi Diabetes</string>
    <string name="apakah_anda_pernah_merasakan_gejala_gejala_seperti_dibawah_ini">Apakah anda pernah merasakan gejala seperti dibawah ini :</string>
    <string name="pertanyaan_diabetes">Pertanyaan Diabetes</string>
    <string name="iya">Iya</string>
    <string name="masukan_umur_anda_terlebih_dahulu">Masukan umur anda terlebih dahulu</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="pilih_gender">Pilih Gender :</string>
    <string name="pastikan_untuk_mengisi_data_diatas_dengan_benar_dan_sesuai_dengan_diri_anda">Pastikan untuk mengisi data diatas dengan benar dan sesuai dengan diri anda</string>
    <string name="hasil">Hasil</string>
    <string name="berdasarkan_data_gejala_yang_anda_alami_maka">Berdasarkan data gejala yang anda alami \nmaka :</string>
    <string name="ilustrasi">ilustrasi</string>
    <string name="penjelasan_hasil_positif"><font color="#000000">Anda</font> <font color="#FF0000"><b>Berpotensi</b></font> <font color="#000000">terkena Diabetes</font></string>
    <string name="penjelasan_hasil_negatif"><font color="#000000">Untuk saat ini anda</font> <font color="#75C44C"><b>tidak berpotensi</b></font> <font color="#000000">\nterkena Diabetes</font></string>
    <string name="dari_hasil_deteksi_anda_berpontesi">Dari hasil deteksi anda berpontesi</string>
    <string name="_78">78%</string>
    <string name="terkena_penyakit_diabtes_segera_cegah_dengan_menerapkan_pola_hidup_sehat">terkena penyakit diabtes, Segera cegah dengan menerapkan pola hidup sehat.</string>
    <string name="hasil_deteksi_ini_hanyalah_sebagai_alat_deteksi_dini_yang_berguna_untuk_pencegahan">Hasil deteksi ini hanyalah sebagai alat deteksi dini yang berguna untuk pencegahan.</string>
    <string name="apakah_anda_mengalami_poliuria_npoliuria_adalah_kondisi_ketika_seseorang_buang_air_kecil_lebih_sering_dibanding_hari_biasanya">Apakah anda merasakan sering buang air kecil lebih dari biasanya?</string>
    <string name="apakah_anda_mengalami_polydipsia_atau_merasakan_haus_yang_berlebihan">Apakah anda sering merasakan haus yang berlebihan?</string>
    <string name="apakah_berat_badan_anda_tiba_tiba_mengalami_penurunan_yang_drastis">Apakah berat badan anda tiba-tiba mengalami penurunan yang drastis?</string>
    <string name="apakah_anda_tubuh_anda_sering_terasa_lemas">Apakah anda tubuh anda sering terasa lemas?</string>
    <string name="apakah_anda_merasakan_gejala_polyphagia_dimana_anda_mengalami_rasa_lapar_berlebihan_atau_peningkatan_nafsu_makan_lebih_dari_biasanya">Apakah anda sering mengalami rasa lapar berlebihan atau peningkatan nafsu makan lebih dari biasanya?</string>
    <string name="apakah_anda_mengalami_genital_trush_atau_infeksi_jamur_pada_daerah_kemaluan">Apakah anda mengalami infeksi jamur pada daerah kemaluan?</string>
    <string name="apakah_anda_mengalami_pengaburan_pada_penglihatan_anda">Apakah anda mengalami pengaburan pada penglihatan anda?</string>
    <string name="apakah_anda_sering_merasakan_gatal_pada_kulit_anda">Apakah anda sering merasakan gatal pada kulit anda?</string>
    <string name="apakah_anda_mengalami_gangguan_emosional_seperti_mudah_marah">Apakah anda mengalami gangguan emosional seperti mudah marah?</string>
    <string name="jika_anda_mengalami_luka_apakah_luka_tersebut_sulit_atau_lama_untuk_pulih">Jika anda mengalami luka apakah luka tersebut sulit atau lama untuk pulih?</string>
    <string name="apakah_anda_mengalami_paresis_n_paresis_adalah_suatu_kondisi_ditandai_oleh_lemahnya_gerak_badan_atau_hilangnya_sebagian_gerakan_badan">Apakah anda sering mengalami kondisi terasa lemahnya gerak badan, atau bahkan sampai tidak bisa bergerak pada sebagian tubuh anda?</string>
    <string name="apakah_otot_anda_sering_terasa_kaku">Apakah otot anda sering terasa kaku?</string>
    <string name="apakah_anda_mengalami_kerontokan_rambut">Apakah anda mengalami kerontokan Rambut?</string>
    <string name="apakah_anda_memiliki_kelebihan_berat_badan_atau_obesitas">Apakah anda memiliki kelebihan berat badan atau obesitas?</string>
    <string name="tetap_terapkan_pola_hidup_sehat_dan_pola_makan_yang_teratur_untuk_terus_menjaga_kesehatan_pada_diri_anda">Tetap terapkan pola hidup sehat dan pola makan yang teratur untuk terus menjaga kesehatan pada diri anda.</string>
    <string-array name="nameDev">
        <item>Herdi Yusli</item>
        <item>Paskalis Sinurat</item>
        <item>Surya Herdiansyah</item>
        <item>Mohammad Aldrin Arifin</item>
        <item>Wahdina Azizah</item>
    </string-array>
    <string-array name="role">
        <item>Mobile Development</item>
        <item>Machine Learning</item>
        <item>Machine Learning</item>
        <item>Machine Learning</item>
        <item>Cloud Computing</item>
    </string-array>
    <string-array name="foto">
        <item>@drawable/logo</item>
        <item>@drawable/logo</item>
        <item>@drawable/logo</item>
        <item>@drawable/logo</item>
        <item>@drawable/logo</item>
    </string-array>
    <string-array name="tipeDiabet">
        <item>Diabetes Tipe 1</item>
        <item>Diabetes Tipe 2</item>
        <item>Diabetes Gestasional</item>
        <item>Diabetes LADA</item>
        <item>Diabetes MODY</item>
    </string-array>
</resources>