<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.AlarmActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginHorizontal="24dp"
        android:text="@string/pagi"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:layout_marginHorizontal="24dp"
        android:text="@string/ketuk_waktu_untuk_setting_alarm"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_repeating_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/_08_00"
            android:textColor="@color/black"
            android:textSize="48sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel_repeating_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:layout_marginStart="24dp"
            android:layout_weight="0.5"
            android:backgroundTint="@color/blue_purp"
            android:text="@string/cancel_alarm"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_set_repeating_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_weight="0.5"
            android:backgroundTint="@color/blue_purp"
            android:text="@string/set_repeating_alarm"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>